Rigid body costraint produces dependency cycle #79117

Closed
opened 2020-07-20 16:33:15 +02:00 by epis · 15 comments

System Information
Operating system: win 7 64 bits
Graphics card: radeon rx 580

Blender Version since 2.79b to 2.83.2

Short description of error
Rigid body costraint produces dependency cycle. Similar to #78952 but in this case constraint is used on empty object

Exact steps for others to reproduce the error
#79117.blend

  • Open file
  • Play animation

Hinge constraint does not work and there is dependency cycle warning in console

**System Information** Operating system: win 7 64 bits Graphics card: radeon rx 580 **Blender Version** since 2.79b to 2.83.2 **Short description of error** Rigid body costraint produces dependency cycle. Similar to #78952 but in this case constraint is used on empty object **Exact steps for others to reproduce the error** [#79117.blend](https://archive.blender.org/developer/F8714969/T79117.blend) - Open file - Play animation Hinge constraint does not work and there is dependency cycle warning in console
Author

Added subscriber: @epis29

Added subscriber: @epis29

#79292 was marked as duplicate of this issue

#79292 was marked as duplicate of this issue

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I don't understand what is being reported and this file is very complex. Can you demonstrate problem in very simple file?

I don't understand what is being reported and this file is very complex. Can you demonstrate problem in very simple file?
Author

constraint rigid body.blend here's the scene in simplified version

[constraint rigid body.blend](https://archive.blender.org/developer/F8711247/constraint_rigid_body.blend) here's the scene in simplified version

For objects to not "break apart" you need to set angle limit on constraint. Is that the problem?

For objects to not "break apart" you need to set angle limit on constraint. Is that the problem?
Author

I don't want the objects to break, but that the object on the right before launching the animation, once launched, that this one turns on the x-axis and not on the z-axis, look at the file I'm going to attach, and compare it to the one I made for you in a simple way, you'll see that I did the same thing and that it doesn't work at home.

on the file I've attached there now, you'll see that the pods rotate freely, unlike what I did simply by doing exactly the same thing.manege-TESTE_2.blend

I don't want the objects to break, but that the object on the right before launching the animation, once launched, that this one turns on the x-axis and not on the z-axis, look at the file I'm going to attach, and compare it to the one I made for you in a simple way, you'll see that I did the same thing and that it doesn't work at home. on the file I've attached there now, you'll see that the pods rotate freely, unlike what I did simply by doing exactly the same thing.[manege-TESTE_2.blend](https://archive.blender.org/developer/F8713334/manege-TESTE_2.blend)

I think there are 2 problems: you need to orient Z axis of empty with hinge constraint to be same as desired axis of rotation. In file constraint rigid body.blend Z axis is perpendicular to rotation axis. Then there seems to be bug where rigid body constraint will create dependency cycle. You can see dependency cycle reported in system console. This can prevent simulations working correctly. That is probably the main problem.

#78952

I think there are 2 problems: you need to orient Z axis of empty with hinge constraint to be same as desired axis of rotation. In file `constraint rigid body.blend` Z axis is perpendicular to rotation axis. Then there seems to be bug where rigid body constraint will create dependency cycle. You can see dependency cycle reported in system console. This can prevent simulations working correctly. That is probably the main problem. #78952
Richard Antalik changed title from bug rigid body constraint type hinge to Rigid body costraint produces dependency cycle 2020-07-23 05:13:59 +02:00

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Author

so, what can I do about it ? since I'll need the game blender, I'll stay on 2.79b since I can't find any tutorials in french for upbge, so if I could get a patch for 2.79b it would be cool.

all I do to be able to understand you and answer you is to use a translator...

so, what can I do about it ? since I'll need the game blender, I'll stay on 2.79b since I can't find any tutorials in french for upbge, so if I could get a patch for 2.79b it would be cool. all I do to be able to understand you and answer you is to use a translator...

@epis29 I am not sure what do you mean. This bug will have to be fixed, that will take some time.

Game engine is no longer developed and part of blender. UPBGE is not maintained by us either. 2.79 will not receive any patches

@epis29 I am not sure what do you mean. This bug will have to be fixed, that will take some time. Game engine is no longer developed and part of blender. UPBGE is not maintained by us either. 2.79 will not receive any patches

Added subscriber: @SVAFnemesis

Added subscriber: @SVAFnemesis

This issue was referenced by 8dc2fbd7b6

This issue was referenced by 8dc2fbd7b666b6cf0477627249f1a2b6a4924e9e
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2020-07-30 18:26:26 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79117
No description provided.