Fix T79117: dependency cycle with passive rigid body objects

Reviewers: zeddb

Differential Revision: D8431